Changed collapsing component to avoid findDOM

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
-.App {
+.App{
   text-align: center;
+}
+
+.precollapse::after{
+  content: "";
+
 }
 
 .App-logo {
